# autocircuit

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Mesh.cpp  Mesh.h  README.md  circuit  cycles.data  eigenutil.h  graph.h  indm.txt  main  main.cpp  mesh.h  output.txt  sovr.h  tension.h  voltage.h
.github/workflows/: cmake.yml
doc/html/: index.html
include/: eigenconv.h  graph.h  mesh.h  sovr.h  util.h  voltage.h
src/: main.cpp
